@@ -5,6 +5,10 @@ ikiwiki (2.21) UNRELEASED; urgency=low
     those older versions too.
   * aggregate: Don't let feeds set creation times for pages in the future.
   * Add full parser for git diff-tree output (Brian Downing)
+  * aggregate: Fork a child process to handle the aggregation. This simplifies
+    the code, since that process can change internal state as needed, and 
+    it will automatically be cleaned up for the parent process, which proceeds
+    to render the changes.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 11 Jan 2008 15:09:37 -0500
 
